adds routes and controller:get+create for projects
