# api/core/backend/docs/swagger.yaml
@@ -51,6 +51,19 @@ definitions:
         description: validate:"required"`
         type: string
     type: object
+  models.Project:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      updated_at:
+        type: string
+    required:
+    - name
+    type: object
   models.User:
     properties:
       created_at:
@@ -262,6 +275,68 @@ paths:
       summary: get all exists cloud providers
       tags:
       - CloudProvs
+  /v1/project:
+    post:
+      consumes:
+      - application/json
+      description: Create a new project.
+      parameters:
+      - description: Name
+        in: body
+        name: name
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Project'
+      security:
+      - ApiKeyAuth: []
+      summary: create a new project
+      tags:
+      - Project
+  /v1/project/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get project by given ID.
+      parameters:
+      - description: Project ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Project'
+      summary: get project by given ID
+      tags:
+      - Project
+  /v1/projects:
+    get:
+      consumes:
+      - application/json
+      description: Get all exists projects.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Project'
+            type: array
+      summary: get all exists projects
+      tags:
+      - Projects
   /v1/token/renew:
     post:
       consumes:
