# api/core/backend/pkg/routes/private_routes.go
@@ -13,6 +13,7 @@ func PrivateRoutes(a *fiber.App) {
 
 	// Routes for POST method:
 	route.Post("/book", middleware.JWTProtected(), controllers.CreateBook)           // create a new book
+	route.Post("/project", middleware.JWTProtected(), controllers.CreateProject)
 	route.Post("/user/sign/out", middleware.JWTProtected(), controllers.UserSignOut) // de-authorization user
 	route.Post("/token/renew", middleware.JWTProtected(), controllers.RenewTokens)   // renew Access & Refresh tokens
 
