# api/core/backend/pkg/routes/public_routes.go
@@ -15,7 +15,9 @@ func PublicRoutes(a *fiber.App) {
 	route.Get("/book/:id", controllers.GetBook) // get one book by ID
 
 	route.Get("/cloudprovs", controllers.GetCloudProvs)
-
+	route.Get("/projects", controllers.GetProjects)
+	route.Get("/project/:id", controllers.CreateProject)
+	
 	// Routes for POST method:
 	route.Post("/user/sign/up", controllers.UserSignUp) // register a new user
 	route.Post("/user/sign/in", controllers.UserSignIn) // auth, return Access & Refresh tokens
